# lectures_generator

./: README.md  img2vid.py  lectures_generator_demo.ipynb  main.py  pyproject.toml  requirements.txt  script.py  tts.py  video_generate.py
Grad-TTS/: inference.py  requirements.txt
Grad-TTS/hifi-gan/: models.py
MakeItTalk/: README.md  main_end2end.py  main_end2end_cartoon.py  main_gen_new_puppet.py  requirements.txt
MakeItTalk/examples_cartoon/: STD_FACE_LANDMARKS.txt  roy_example.pts  roy_example_delauney_tri.txt  roy_example_face_close_mouth.txt  roy_example_face_open_mouth.txt  roy_example_face_open_mouth_norm.txt  roy_example_scale_shift.txt  roy_face_open_mouth.txt
MakeItTalk/src/approaches/: train_image_translation.py
MakeItTalk/util/: utils.py
