[tool.poetry]
name = "lectures_generator"
version = "0.1.0"
description = "Generate a lecture by text and human face photo!"
authors = ["Azat Valeev azatvaleev356778@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.25.1"
Cython = "==0.29.23"
numpy = "==1.19.5"
torch = "==1.9.0"
matplotlib = "==3.3.3"
einops = "==0.3.0"
inflect = "==5.0.2"
Unidecode = "==1.1.2"
librosa = "==0.8.0"
scipy = "==1.5.4"
tqdm = "^4.62.3"
ffmpeg-python = "^0.2.0"
opencv-python = "^4.5"
face-alignment = "^1.3.5"
scikit-learn = "^1.0.1"
pynormalize = "^0.1.4"
SoundFile = "^0.10.3"
pysptk = "^0.1.18"
pyworld = "^0.3.0"
Resemblyzer = "^0.1.1-alpha.0"
tensorboardX = "^2.4.1"
gdown = "^4.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
